LeasedLineTools/src/objects/BT_Wholesale_Product__c.object
<CustomObject>
    <fields>
        <fullName>Access_Type__c</fullName>
        <label>Access Type</label>
        <picklist>
            <picklistValues>
                <fullName>Fibre</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bandwidth__c</fullName>
        <label>Bandwidth</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bearer__c</fullName>
        <label>Bearer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connection_Price__c</fullName>
        <label>Connection Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Etherflow_Pricing__c</fullName>
        <label>Etherflow Pricing</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hub_Site_Postcode__c</fullName>
        <label>Hub Site Postcode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>BT Wholesale Products</relationshipLabel>
        <relationshipName>BT_Wholesale_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Term__c</fullName>
        <label>Product Term</label>
        <picklist>
            <picklistValues>
                <fullName>1 Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rental_Price__c</fullName>
        <label>Rental Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>BT Wholesale Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>BT Wholesale Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BT Wholesale Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>